--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Rehan Ayub",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1"
   }
 }
